Bug 69541 - ir_constant_expression.cpp(1384) : error C3861: 'isnormal': identifier not found
Summary: ir_constant_expression.cpp(1384) : error C3861: 'isnormal': identifier not found
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Windows (All)
: medium blocker
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-09-18 18:32 UTC by Vinson Lee
Modified: 2013-09-29 18:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-09-18 18:32:52 UTC
mesa: 602d368446e7c97225f98429ffd54b53522c3b36 (master)


  Compiling src\glsl\ir_constant_expression.cpp ...
ir_constant_expression.cpp
src\glsl\ir_constant_expression.cpp(564) : warning C4244: '=' : conversion from 'int' to 'float', possible loss of data
src\glsl\ir_constant_expression.cpp(1384) : error C3861: 'isnormal': identifier not found
src\glsl\ir_constant_expression.cpp(1385) : error C3861: 'copysign': identifier not found


commit b2ab840130677bbe7b67de4727fcd91ee6506bb8
Author: Matt Turner <mattst88@gmail.com>
Date:   Thu Aug 22 13:31:18 2013 -0700

    glsl: Add support for ldexp.
    
    v2: Drop frexp. Rebase on builtins rewrite.
    Reviewed-by: Paul Berry <stereotype441@gmail.com>
Comment 1 Kenneth Graunke 2013-09-19 01:32:50 UTC
FWIW it looks like MSVC 2013 added isnormal(), but still lacks copysign():

http://blogs.msdn.com/b/vcblog/archive/2013/07/19/c99-library-support-in-visual-studio-2013.aspx
Comment 2 Vinson Lee 2013-09-29 18:06:57 UTC
commit 6d29db715b8d60718ada1ab8ad19d969cac43caf
Author: Vinson Lee <vlee@freedesktop.org>
Date:   Sun Sep 22 16:08:26 2013 -0700

    glsl: Define isnormal and copysign for MSVC to fix build.
    
    This patch fixes these MSVC build errors.
    
    ir_constant_expression.cpp
    src\glsl\ir_constant_expression.cpp(564) : warning C4244: '=' : conversion from 'int' to 'float', possible loss of data
    src\glsl\ir_constant_expression.cpp(1384) : error C3861: 'isnormal': identifier not found
    src\glsl\ir_constant_expression.cpp(1385) : error C3861: 'copysign': identifier not found
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=69541
    Signed-off-by: Vinson Lee <vlee@freedesktop.org>
    Acked-by: Matt Turner <mattst88@gmail.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.